# PADT-Lab4-LazySequences

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
app/ui/: ui.cpp  ui.hpp
core/: CMakeLists.txt
core/src/: CMakeLists.txt
core/src/interfaces/: sequence.hpp
fsm/: CMakeLists.txt
fsm/include/: FsmGenerator.hpp  FsmRuleEngine.hpp
lazy/: CMakeLists.txt
lazy/include/: Cardinal.hpp  CollectionGenerator.hpp  ConcatGenerator.hpp  FilterGenerator.hpp  FunctionGenerator.hpp  Generator.hpp  IAllocatedObject.hpp  LazyContext.hpp  LazySequence.hpp  LazySequenceBuilder.hpp  RecurrentGenerator.hpp  SingleItemGenerator.hpp  SliceGenerator.hpp
lazy/src/: LazyContext.cpp
streams/: CMakeLists.txt
streams/include/: GeneratorReadStream.hpp  ReadOnlyStream.hpp  ReadWriteStream.hpp  SequenceReadStream.hpp  SequenceWriteStream.hpp  StreamExceptions.hpp  StreamInterfaces.hpp  WriteOnlyStream.hpp
tests/: CMakeLists.txt  cardinal_tests.cpp  context_tests.cpp  fsm_tests.cpp  sequence_tests.cpp  streams_tests.cpp
